--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32dev]
 ;platform = espressif32@3.2.0 ;force to use v3.2.0 with framework-arduinoespressif32 3.10006.210326 (1.0.6) --> WiFi reconnecting issues after password change!
-platform = espressif32@4.3.0 ;force to use v4.3.0 with framework-arduinoespressif32  3.20003.0 (2.0.3) 
+platform = espressif32@4.3.0 ;force to use v4.3.0 with framework-arduinoespressif32  3.20003.0 (2.0.3) works correctly
 ;platform = espressif32 ;use latest version
 board = esp32dev
 board_build.mcu = esp32
